added users db and CRUD
